Fix load cartes projet + horizontal scroll on buttons

--- a/frontend/src/Pages/PageAccueil.scss
+++ b/frontend/src/Pages/PageAccueil.scss
@@ -81,7 +81,6 @@
             height: 92%;
             display: flex;
             flex-direction: column;
-            justify-content: center;
             align-items: center;
             .navCarousel{
                 width: 200px;
@@ -294,6 +293,25 @@
                   }
                 .CarteEnseignant{
                     display: inline-block;
+                }
+            }
+
+            .boutonsCarousel{
+                height: 50px;
+                width: 120px;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                margin: 50px auto;
+                .boutonGauche{
+                    width: 50px;
+                    height: 50px;
+                    background-color: #eee;
+                }
+                .boutonDroite{
+                    width: 50px;
+                    height: 50px;
+                    background-color: #eee;
                 }
             }
 
